Fixed sections collapsing in on themselves

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -6,7 +6,7 @@
     height: 100vh;
     box-sizing: border-box;
     grid-template-columns: repeat(2, 1fr);
-    margin: 5em 0 5em 15rem;
+    margin: 500px 0 500px 15rem;
     align-items: center;
 
     .about-content-wrapper {
@@ -22,6 +22,7 @@
 @media (max-width: 1024px) {
     #about {
         grid-template-columns: 1fr;
-        margin: 0 30px;
+        margin-right: 30px;
+        margin-left: 30px;
     }
 }
