--- a/src/styles/credits.scss
+++ b/src/styles/credits.scss
@@ -5,7 +5,7 @@
     min-height: 100vh;
     height: 100vh;
     grid-template-columns: repeat(2, 1fr);
-    margin: 5em 0 5em 15rem;
+    margin: 500px 0 500px 15rem;
     align-items: center;
     box-sizing: border-box;
 
@@ -24,6 +24,7 @@
 @media (max-width: 1024px) {
     #credits {
         grid-template-columns: 1fr;
-        margin: 500px 30px;
+        margin-left: 30px;
+        margin-right: 30px;
     }
 }
