--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -87,7 +87,8 @@
 
 @media (max-width: 1600px) {
     #work {
-        margin: 0 30px;
+        margin-left: 30px;
+        margin-right: 30px;
     }
     
     #work .works-container {
